[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/sandbox",
    "crates/executor",
    "crates/cache",
    "crates/hasher",
    "crates/config",
    "crates/reporter",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/your-org/reprorun"
homepage = "https://github.com/your-org/reprorun"
documentation = "https://github.com/your-org/reprorun/tree/master/docs"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
