[package]
name = "reprorun-sandbox"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reprorun-config = { path = "../config" }
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.13"
